samples/_failures_safe/1761421607_2f60c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12bb94cb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_12bb94cb.c:172:9: error: expected declaration or statement at end of input
  172 |         tokens[token_count].column = column;
      |         ^~~~~~
./samples/SAFE/__tmp_12bb94cb.c:172:9: error: expected declaration or statement at end of input
